Switch to public API usage of gson library